--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,9 @@ dependencies {
 
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
+
+    // optional - RxJava3 support for Room
+    implementation "androidx.room:room-rxjava3:$room_version"
+    implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
+
 }
