--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,6 @@ dependencies {
     def activity_version = "1.5.1"
     def fragment_version = "1.5.4"
     def lifecycle_version = "2.5.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
     // Java language implementation
@@ -93,4 +92,5 @@ dependencies {
     implementation "androidx.room:room-rxjava3:$room_version"
     implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
 
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 }
