--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <activity
+            android:name="com.example.comicshack.ReadComicActivity"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
