--- a/.github/workflows/UITest.yml
+++ b/.github/workflows/UITest.yml
@@ -19,6 +19,6 @@ jobs:
         # api-level: 29
         api-level: 33
         target: default
-        arch: x86
+        arch: x86_64
         profile: Nexus 6
         script: ./gradlew connectedCheck --stacktrace
