--- a/.github/workflows/android-UITest.yml
+++ b/.github/workflows/android-UITest.yml
@@ -18,6 +18,6 @@ jobs:
       with:
         api-level: 33
         target: default
-        arch: x86
+        arch: x86_64
         profile: Nexus 6
         script: ./gradlew connectedCheck --stacktrace
